feat: add health score to for clients